--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "~1.5.0",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "~1.9.5",
     "@types/react": "~18.2.15",
     "@types/react-dom": "~18.2.7",
     "@typescript-eslint/eslint-plugin": "~6.6.0",
@@ -26,6 +28,8 @@
     "eslint-plugin-react": "~7.33.2",
     "eslint-plugin-react-hooks": "~4.6.0",
     "eslint-plugin-react-refresh": "~0.4.3",
+    "react-redux": "~8.1.2",
+    "react-router-dom": "~6.15.0",
     "typescript": "~5.0.2",
     "vite": "~4.4.5"
   }
