--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
     "react-redux": "~8.1.2",
-    "react-router-dom": "~6.15.0"
+    "react-router-dom": "~6.15.0",
+    "styled-components": "~6.0.8"
   },
   "devDependencies": {
     "@types/react": "~18.2.15",
@@ -30,7 +31,6 @@
     "eslint-plugin-react": "~7.33.2",
     "eslint-plugin-react-hooks": "~4.6.0",
     "eslint-plugin-react-refresh": "~0.4.3",
-    "styled-components": "~6.0.8",
     "typescript": "~5.0.2",
     "vite": "~4.4.5"
   }
