chore: add lint step

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install
         run: |
           yarn install --frozen-lockfile --network-timeout 1000000000
+      - name: lint
+        run: /
+          yarn lint
       - name: Build
         run: |
           yarn build
