--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vite build",
     "compile": "tsc",
     "dev": "vite",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "preview": "vite preview"
   },
   "dependencies": {
