--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "@emotion/react": "~11.11.1",
     "@emotion/styled": "~11.11.0",
+    "@faker-js/faker": "~8.1.0",
+    "@iconify/react": "~4.1.1",
     "@mui/icons-material": "~5.14.9",
     "@mui/material": "~5.14.10",
     "@mui/styled-engine-sc": "~5.14.10",
     "@reduxjs/toolkit": "~1.9.5",
     "axios": "~1.5.0",
+    "change-case": "~4.1.2",
+    "date-fns": "~2.30.0",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
     "react-redux": "~8.1.2",
     "react-router-dom": "~6.15.0",
+    "simplebar-react": "~3.2.4",
     "styled-components": "~6.0.8"
   },
   "devDependencies": {
