--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mui/material": "~5.14.10",
     "@mui/styled-engine-sc": "~5.14.10",
     "@reduxjs/toolkit": "~1.9.5",
+    "@types/numeral": "~2.0.3",
     "axios": "~1.5.0",
     "change-case": "~4.1.2",
     "date-fns": "~2.30.0",
+    "numeral": "~2.0.6",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
     "react-redux": "~8.1.2",
