--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "~1.5.0",
     "change-case": "~4.1.2",
     "date-fns": "~2.30.0",
+    "numeral": "~2.0.6",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
     "react-hook-form": "~7.46.2",
@@ -31,6 +32,7 @@
     "styled-components": "~6.0.8"
   },
   "devDependencies": {
+    "@types/numeral": "~2.0.3",
     "@hookform/devtools": "~4.3.1",
     "@types/react": "~18.2.15",
     "@types/react-dom": "~18.2.7",
