--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,13 @@
 {
 	"version": "0.2.0",
 	"configurations": [
-	  {
-		"type": "node",
-		"request": "launch",
-		"name": "Launch TS",
-		"runtimeExecutable": "npm",
-		"runtimeArgs": ["run", "dev"],
-		"console": "integratedTerminal",
-		"restart": true,
-		"autoAttachChildProcesses": true
-	  }
+		{
+			"type": "chrome",
+			"request": "launch",
+			"name": "Debug react app",
+			"url": "http://localhost:3000",
+			"webRoot": "${workspaceFolder}/src",
+			"preLaunchTask": "npm: dev",
+		}
 	]
 }
