--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "react-redux": "~8.1.2",
     "react-router-dom": "~6.15.0",
     "simplebar-react": "~3.2.4",
-    "styled-components": "~6.0.8"
+    "styled-components": "~6.0.8",
+    "uuid": "~9.0.1"
   },
   "devDependencies": {
     "@hookform/devtools": "~4.3.1",
     "@types/numeral": "~2.0.3",
     "@types/react": "~18.2.15",
     "@types/react-dom": "~18.2.7",
+    "@types/uuid": "~9.0.5",
     "@typescript-eslint/eslint-plugin": "~6.6.0",
     "@typescript-eslint/parser": "~6.6.0",
     "@vitejs/plugin-react": "~4.0.3",
