--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@emotion/react": "~11.11.1",
     "@emotion/styled": "~11.11.0",
     "@faker-js/faker": "~8.1.0",
-    "@iconify/react": "~4.1.1",
     "@fontsource/roboto": "~5.0.8",
+    "@iconify/react": "~4.1.1",
     "@mui/icons-material": "~5.14.9",
     "@mui/material": "~5.14.10",
     "@mui/styled-engine-sc": "~5.14.10",
@@ -22,6 +22,7 @@
     "axios": "~1.5.0",
     "change-case": "~4.1.2",
     "date-fns": "~2.30.0",
+    "firebase": "~10.4.0",
     "numeral": "~2.0.6",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
@@ -29,13 +30,15 @@
     "react-redux": "~8.1.2",
     "react-router-dom": "~6.15.0",
     "simplebar-react": "~3.2.4",
-    "styled-components": "~6.0.8"
+    "styled-components": "~6.0.8",
+    "uuid": "~9.0.1"
   },
   "devDependencies": {
-    "@types/numeral": "~2.0.3",
     "@hookform/devtools": "~4.3.1",
+    "@types/numeral": "~2.0.3",
     "@types/react": "~18.2.15",
     "@types/react-dom": "~18.2.7",
+    "@types/uuid": "~9.0.5",
     "@typescript-eslint/eslint-plugin": "~6.6.0",
     "@typescript-eslint/parser": "~6.6.0",
     "@vitejs/plugin-react": "~4.0.3",
