--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "change-case": "~4.1.2",
     "date-fns": "~2.30.0",
     "firebase": "~10.4.0",
+    "lodash": "~4.17.21",
     "numeral": "~2.0.6",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
