--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -17,10 +17,13 @@ jobs:
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1
         with:
-          envkey_DEBUG                            : false
-          envkey_BACKEND_ENDPOINT                 : ${{ secrets.BACKEND_ENDPOINT }}
-          file_name                               : .env
-          fail_on_empty                           : true
+          envkey_DEBUG                    : false
+          envkey_VITE_FIREBASE_API_KEY    : ${{ secrets.VITE_FIREBASE_API_KEY }}
+          envkey_VITE_FIREBASE_PROJECT_ID : ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
+          envkey_VITE_FIREBASE_APP_ID     : ${{ secrets.VITE_FIREBASE_APP_ID }}
+          envkey_VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
+          file_name                       : .env
+          fail_on_empty                   : true
       - name: Confirm env file
         run: cat .env
       - name: Install
