--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "~5.14.9",
     "@mui/material": "~5.14.10",
     "@mui/styled-engine-sc": "~5.14.10",
+    "@mui/x-data-grid": "~6.16.2",
     "@reduxjs/toolkit": "~1.9.5",
     "axios": "~1.5.0",
     "change-case": "~4.1.2",
