--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@mui/icons-material": "~5.14.9",
     "@mui/material": "~5.14.10",
     "@mui/styled-engine-sc": "~5.14.10",
+    "@mui/x-data-grid": "~6.16.2",
     "@reduxjs/toolkit": "~1.9.5",
     "axios": "~1.5.0",
     "change-case": "~4.1.2",
     "date-fns": "~2.30.0",
     "firebase": "~10.4.0",
+    "lodash": "~4.17.21",
     "numeral": "~2.0.6",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
