feat: reconfig turbo, firebase

--- a/turbo.json
+++ b/turbo.json
@@ -1,12 +1,10 @@
 {
 	"$schema": "https://turbo.build/schema.json",
 	"pipeline": {
-		"build": {
+		"build-base": {
 			"outputs": [
 				"dist/**"
 			]
-		},
-		"compile": {},
-		"lint": {}
+		}
 	}
 }
