--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "vite build",
+    "build": "turbo build-base",
+    "build-base": "vite build",
     "compile": "tsc",
     "dev": "vite --port 3000",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
@@ -52,6 +53,7 @@
     "eslint-plugin-react-hooks": "~4.6.0",
     "eslint-plugin-react-refresh": "~0.4.3",
     "typescript": "~5.0.2",
+    "turbo": "~1.10.15",
     "vite": "~4.4.5"
   }
 }
