--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "noImplicitAny": false,
+    "strictNullChecks": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
