--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "~10.4.0",
     "lodash": "~4.17.21",
     "numeral": "~2.0.6",
+    "pusher-js": "~8.3.0",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
     "react-hook-form": "~7.46.2",
