--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fontsource/roboto": "~5.0.8",
     "@iconify/react": "~4.1.1",
     "@mui/icons-material": "~5.14.9",
+    "@mui/lab": "~5.0.0-alpha.152",
     "@mui/material": "~5.14.10",
     "@mui/styled-engine-sc": "~5.14.10",
     "@mui/x-data-grid": "~6.16.2",
+    "@mui/x-tree-view": "~6.17.0",
     "@reduxjs/toolkit": "~1.9.5",
     "axios": "~1.5.0",
     "change-case": "~4.1.2",
@@ -53,8 +55,8 @@
     "eslint-plugin-react": "~7.33.2",
     "eslint-plugin-react-hooks": "~4.6.0",
     "eslint-plugin-react-refresh": "~0.4.3",
-    "typescript": "~5.0.2",
     "turbo": "~1.10.15",
+    "typescript": "~5.0.2",
     "vite": "~4.4.5"
   }
 }
