--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "~1.9.5",
     "axios": "~1.5.0",
     "change-case": "~4.1.2",
+    "crypto-js": "~4.2.0",
     "date-fns": "~2.30.0",
     "firebase": "~10.4.0",
     "lodash": "~4.17.21",
