--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@reduxjs/toolkit": "~1.9.5",
     "axios": "~1.5.0",
     "change-case": "~4.1.2",
+    "crypto-js": "~4.2.0",
     "date-fns": "~2.30.0",
     "firebase": "~10.4.0",
     "lodash": "~4.17.21",
@@ -35,6 +36,7 @@
     "react-hook-form": "~7.46.2",
     "react-redux": "~8.1.2",
     "react-router-dom": "~6.15.0",
+    "react-toastify": "~9.1.3",
     "simplebar-react": "~3.2.4",
     "styled-components": "~6.0.8",
     "uuid": "~9.0.1"
