chore: add action secret

--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -17,11 +17,17 @@ jobs:
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1
         with:
-          envkey_DEBUG                    : false
-          envkey_VITE_FIREBASE_API_KEY    : ${{ secrets.VITE_FIREBASE_API_KEY }}
-          envkey_VITE_FIREBASE_PROJECT_ID : ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
-          envkey_VITE_FIREBASE_APP_ID     : ${{ secrets.VITE_FIREBASE_APP_ID }}
-          envkey_VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
+          envkey_DEBUG                          : false
+          envkey_VITE_FIREBASE_API_KEY          : ${{ secrets.VITE_FIREBASE_API_KEY }}
+          envkey_VITE_FIREBASE_PROJECT_ID       : ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
+          envkey_VITE_FIREBASE_APP_ID           : ${{ secrets.VITE_FIREBASE_APP_ID }}
+          envkey_VITE_FIREBASE_AUTH_DOMAIN      : ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
+          envkey_VITE_PUSHER_APP_KEY            : ${{ secrets.VITE_PUSHER_APP_KEY }}
+          envkey_VITE_PUSHER_CLUSTER            : ${{ secrets.VITE_PUSHER_CLUSTER }}
+          envkey_VITE_PUSHER_CHANNEL            : ${{ secrets.VITE_PUSHER_CHANNEL }}
+          envkey_VITE_PUSHER_BIND_INSERTED_EVENT: ${{ secrets.VITE_PUSHER_BIND_INSERTED_EVENT }}
+          envkey_VITE_IDP_URL                   : ${{ secrets.VITE_IDP_URL }}
+          envkey_VITE_GMS_URL                   : ${{ secrets.VITE_GMS_URL }}
           file_name                       : .env
           fail_on_empty                   : true
       - name: Confirm env file
