--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto-js": "~4.2.0",
     "date-fns": "~2.30.0",
     "firebase": "~10.4.0",
+    "jwt-decode": "~4.0.0",
     "lodash": "~4.17.21",
     "numeral": "~2.0.6",
     "pusher-js": "~8.3.0",
