--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-toastify": "~9.1.3",
     "simplebar-react": "~3.2.4",
     "styled-components": "~6.0.8",
+    "swagger-ui-react": "~5.10.5",
     "uuid": "~9.0.1"
   },
   "devDependencies": {
